<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<groupId>com.entopix.maui</groupId>
	<artifactId>maui</artifactId>
	<version>pt</version>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<version>1.1.6.RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>log4j-over-slf4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>4.1.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.10</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.entopix/maui -->
		<dependency>
    		<groupId>com.entopix</groupId>
    		<artifactId>maui</artifactId>
    		<version>1.3.0</version>
    		<exclusions>
    			<exclusion>
    				<groupId>com.entopix</groupId>
    				<artifactId>maui-data</artifactId>
    			</exclusion>
    			<exclusion>
    				<groupId>org.apache.lucene</groupId>
    				<artifactId>lucene-snowball</artifactId>
    			</exclusion>
    		</exclusions>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
	      <groupId>com.github.fracpete</groupId>
	      <artifactId>ptstemmer-weka-package</artifactId>
	      <version>2.0.0</version>
	      <exclusions>
	        <exclusion>
	          <groupId>nz.ac.waikato.cms.weka</groupId>
	          <artifactId>weka-dev</artifactId>
	        </exclusion>
	      </exclusions>
	    </dependency>
	    <dependency>
		    <groupId>org.apache.lucene</groupId>
		    <artifactId>lucene-core</artifactId>
		    <version>7.1.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.lucene</groupId>
		    <artifactId>lucene-analyzers-common</artifactId>
		    <version>7.1.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-math3</artifactId>
		    <version>3.6.1</version>
		</dependency>
		<dependency> 
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.0.4</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
		    <plugin>
          		<artifactId>maven-compiler-plugin</artifactId>
          		<version>3.1</version>
          		<configuration>
             		 <source>1.8</source>
             		 <target>1.8</target>
          		</configuration>
      		</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>1.1.6.RELEASE</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>com.entopix.maui.main.StandaloneMain</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
